upgrade devTool&itemCreator